--- a/themes/hugo-swift-theme/layouts/partials/footer.html
+++ b/themes/hugo-swift-theme/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <p>August 6,&nbsp;<span class="year"></span>&nbsp;.&nbsp&nbspHope today's great, love you :)
+    <p>August 6, 2021</span>&nbsp;.&nbsp&nbspHope today's great, love you :)
     <!--{{ safeHTML (T "designed_by" .Site.Params.designer) }}</p>-->
   </div>
 </footer>
